tests/errors/first_stage/.data/nan/nan.am
myArr: .data 1, 2b, 3
